Fix code table pre overflow

--- a/source/css/components/article.styl
+++ b/source/css/components/article.styl
@@ -186,12 +186,6 @@ article
     .table-striped tbody tr:nth-of-type(odd)
       background-color:#f2f2f2
 
-
-
-
-
-
-
-
-
-
+    pre
+      overflow-x auto
+      overflow-y hidden
